// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`in edit mode. name is empty. should show placeholder and show edit btn 1`] = `
<div
  className="profile-name edit-mode not-set"
>
  <span>
    Your name goes here...
  </span>
  <div
    className="edit-btn"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-pen fa-w-16"
      data-icon="pen"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M290.74 93.24l128.02 128.02-277.99 277.99-114.14 12.6C11.35 513.54-1.56 500.62.14 485.34l12.7-114.22 277.9-277.88zm207.2-19.06l-60.11-60.11c-18.75-18.75-49.16-18.75-67.91 0l-56.55 56.55 128.02 128.02 56.55-56.55c18.75-18.76 18.75-49.16 0-67.91z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`name is not empty in edit mode. should render name and show edit btn 1`] = `
<div
  className="profile-name edit-mode"
>
  Lorem ipsum dolor sit amet
  <div
    className="edit-btn"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-pen fa-w-16"
      data-icon="pen"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M290.74 93.24l128.02 128.02-277.99 277.99-114.14 12.6C11.35 513.54-1.56 500.62.14 485.34l12.7-114.22 277.9-277.88zm207.2-19.06l-60.11-60.11c-18.75-18.75-49.16-18.75-67.91 0l-56.55 56.55 128.02 128.02 56.55-56.55c18.75-18.76 18.75-49.16 0-67.91z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`name is not empty in not edit mode. should render name. 1`] = `
<div
  className="profile-name"
>
  Lorem ipsum dolor sit amet
</div>
`;

exports[`not in edit mode and name is empty. should render null 1`] = `null`;
